--- a/src/components/header/appsco-dropdown.html
+++ b/src/components/header/appsco-dropdown.html
@@ -41,6 +41,10 @@ Custom property | Description | Default
                 padding: 0;
                 margin: 0;
 
+                --appsco-account-info-dropdown: {
+                    width: 350px;
+                };
+
                 @apply --appsco-dropdown;
             }
             :host .content {
